--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+naivecalendar (0.3.3) UNRELEASED; urgency=medium
+
+  * Remove tkinter dependencies (switch to full rofi popup)
+
+ -- Daguhh <code.daguhh@zaclys.net>  Tue, 12 Jan 2021 22:50:25 +0100
+
 naivecalendar (0.3.2) UNRELEASED; urgency=medium
 
   * Add "open at date" command option
