add version msg

--- a/debian/naivecalendar.1
+++ b/debian/naivecalendar.1
@@ -5,7 +5,7 @@ naivecalendar
 - rofi calendar popup
 
 .SH SYNOPSIS
-.B naivecalendar [-h] [-p] [-x] [-f 
+.B naivecalendar [-h] [-v] [-p] [-x] [-f 
 .I FORMAT
 .B ] [-e 
 .I EDITOR
@@ -46,6 +46,10 @@ There's somme shortcut to be entered in rofi prompt :
 .TP
 .B -h|--help 
 show this help message and exit
+
+.TP
+.B -v|--version 
+show program's version number and exit
 
 .TP
 .B -p|--print
