update readme and man

--- a/debian/naivecalendar.1
+++ b/debian/naivecalendar.1
@@ -119,4 +119,9 @@ pass date to bash when -p option
 .RS
 remember theme after quitting      
 
+.RE
+.I ~/.cache/naivecalendar/event_cache.txt
+.RS
+remember event type after quitting      
+
 
