--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+naivecalendar (0.3.5) UNRELEASED; urgency=medium
+
+  * Add multiple events folder (replace notes)
+  * Add a menu button
+  * Better symbols support for event files names
+
+ -- Daguhh <code.daguhh@zaclys.net>  Fri, 22 Jan 2021 00:24:24 +0100
+
 naivecalendar (0.3.4) UNRELEASED; urgency=medium
 
   * Add copy-to-clipboard option
