--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+naivecalendar (0.4.1) UNRELEASED; urgency=medium
+
+  * Correct characters alignement
+
+ -- Daguhh <code.daguhh@zaclys.net>  Fri, 22 Jan 2021 23:46:05 +0100
+
 naivecalendar (0.4.0) UNRELEASED; urgency=medium
 
   * Add new row (default set for shortcuts)
