--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+naivecalendar (0.5.0) UNRELEASED; urgency=medium
+
+  * More configurable date header
+  * Add themes
+
+ -- Daguhh <code.daguhh@zaclys.net>  Sat, 23 Jan 2021 13:42:02 +0100
+
 naivecalendar (0.4.1) UNRELEASED; urgency=medium
 
   * Correct characters alignement
