--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,12 @@ naivecalendar (0.5.2) UNRELEASED; urgency=medium
 
  -- Daguhh <code.daguhh@zaclys.net>  Sun, 24 Jan 2021 22:04:08 +0100
 
+naivecalendar (0.5.2) UNRELEASED; urgency=medium
+
+  * Calendar themes don't load user themes anymore (-theme-str cmd option)
+
+ -- Daguhh <code.daguhh@zaclys.net>  Sun, 24 Jan 2021 22:04:08 +0100
+
 naivecalendar (0.5.1) UNRELEASED; urgency=medium
 
   * Better help message (show user config shortcuts)
