--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,12 @@
-naivecalendar (0.5.3) UNRELEASED; urgency=medium
+naivecalendar (0.6.0) UNRELEASED; urgency=medium
 
   * Remove unconsistent mode-switcher
-  * Updates themes
   * Add missing optional dependencies
+  * Add script to update all theme at once
+  * Prevent crash when wrong theme name is given
+  * Rewrite menu and shortcut bar construction (prevent unconsitent config)
 
- -- Daguhh <code.daguhh@zaclys.net>  Mon, 25 Jan 2021 01:45:00 +0100
+ -- Daguhh <code.daguhh@zaclys.net>  Mon, 25 Jan 2021 18:13:10 +0100
 
 naivecalendar (0.5.2) UNRELEASED; urgency=medium
 
