--- a/debian/naivecalendar-update.1
+++ b/debian/naivecalendar-update.1
@@ -1,7 +1,7 @@
 .TH NAIVECALENDAR 1 "January 6, 2021"
 
 .SH NAME
-naivecalendar-update-all-themes 
+naivecalendar-update
 - script to update all naivecalendar theme at once
 
 
@@ -35,10 +35,10 @@ don't change files and print to stdout
 show all parameters names
 
 .TP
-.B -p|--parameter         
+.B -p|--parameter PARAMETER
 parameter to change in all config files
 
 .TP
-.B -v|--value             
-new value to set
+.B -v|--value NEW_VALUE
+new value to set (see any config file for type and format)
 
