--- a/debian/naivecalendar-add-event.1
+++ b/debian/naivecalendar-add-event.1
@@ -14,13 +14,11 @@ naivecalendar-update
 
 .SH DESCRIPTION
 .B naivecalendar-add-event
-is a bash script to create, override, delete an event definition for all naivecalendar themes at once
+is a bash script to create, override, delete an event definition for all naivecalendar themes in ~/.config/naivecalendar.themes at once
 
 /!\\ If one file already get this event, nothing will be set, to force for all use -o|--override flag
 
 /!\\ Save your themes before use!
-
-Go to the theme directory and launch
 
 .SH OPTIONS
 
