--- a/debian/naivecalendar-update.1
+++ b/debian/naivecalendar-update.1
@@ -14,11 +14,9 @@ naivecalendar-update
 
 .SH DESCRIPTION
 .B naivecalendar-update-all-themes
-is a bash script to update a parameter for all naivecalendar themes at once
+is a bash script to update a parameter for all naivecalendar themes in ~/.config/naivecalendar/themes at once
 
 /!\\ Save your themes before use!
-
-Go to the theme directory and launch
 
 .SH OPTIONS
 
