--- a/debian/changelog
+++ b/debian/changelog
@@ -1,89 +1,83 @@
+naivecalendar (0.6.2) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Daguhh <code.daguhh@zaclys.net>  Thu, 28 Jan 2021 20:19:21 +0100
+
 naivecalendar (0.6.1) UNRELEASED; urgency=medium
 
-  * Move update-all-theme to update subcommand
-  * Add add-theme subcommand
-  * add manpages and completion
+  * New upstream release
 
  -- Daguhh <code.daguhh@zaclys.net>  Tue, 26 Jan 2021 15:03:28 +0100
 
 naivecalendar (0.6.0) UNRELEASED; urgency=medium
 
-  * Remove unconsistent mode-switcher
-  * Add missing optional dependencies
-  * Add script to update all theme at once
-  * Prevent crash when wrong theme name is given
-  * Rewrite menu and shortcut bar construction (prevent unconsitent config)
-  * Prevent recursive accumulation of rofi calls
+  * New upstream release
 
  -- Daguhh <code.daguhh@zaclys.net>  Mon, 25 Jan 2021 18:13:10 +0100
 
 naivecalendar (0.5.2) UNRELEASED; urgency=medium
 
-  * Calendar themes don't load user themes anymore (-theme-str cmd option)
+  * New upstream release
 
  -- Daguhh <code.daguhh@zaclys.net>  Sun, 24 Jan 2021 22:04:08 +0100
 
 naivecalendar (0.5.1) UNRELEASED; urgency=medium
 
-  * Better help message (show user config shortcuts)
+  * New upstream release
 
  -- Daguhh <code.daguhh@zaclys.net>  Sat, 23 Jan 2021 18:27:44 +0100
 
 naivecalendar (0.5.0) UNRELEASED; urgency=medium
 
-  * More configurable date header
-  * Add themes
+  * New upstream release
 
  -- Daguhh <code.daguhh@zaclys.net>  Sat, 23 Jan 2021 13:42:02 +0100
 
 naivecalendar (0.4.1) UNRELEASED; urgency=medium
 
-  * Correct characters alignement
+  * New upstream release
 
  -- Daguhh <code.daguhh@zaclys.net>  Fri, 22 Jan 2021 23:46:05 +0100
 
 naivecalendar (0.4.0) UNRELEASED; urgency=medium
 
-  * Add new row (default set for shortcuts)
-  * Correct crash when config and cache file conflict
-  * Update and add new themes
+  * New upstream release
 
  -- Daguhh <code.daguhh@zaclys.net>  Fri, 22 Jan 2021 22:11:38 +0100
 
 naivecalendar (0.3.5) UNRELEASED; urgency=medium
 
-  * Add multiple events folder (replace notes)
-  * Add a menu button
-  * Better symbols support for event files names
+  * New upstream release
 
  -- Daguhh <code.daguhh@zaclys.net>  Fri, 22 Jan 2021 00:24:24 +0100
 
 naivecalendar (0.3.4) UNRELEASED; urgency=medium
 
-  * Add copy-to-clipboard option
+  * New upstream release
 
  -- Daguhh <code.daguhh@zaclys.net>  Wed, 20 Jan 2021 00:23:47 +0100
 
 naivecalendar (0.3.3) UNRELEASED; urgency=medium
 
-  * Remove tkinter dependencies (switch to full rofi popup)
+  * New upstream release
 
  -- Daguhh <code.daguhh@zaclys.net>  Tue, 12 Jan 2021 22:50:25 +0100
 
 naivecalendar (0.3.2) UNRELEASED; urgency=medium
 
-  * Add "open at date" command option
+  * New upstream release
 
  -- Daguhh <code.daguhh@zaclys.net>  Sat, 09 Jan 2021 23:23:42 +0100
 
 naivecalendar (0.3.1) UNRELEASED; urgency=medium
 
-  * Make deb package
+  * New upstream release
 
  -- Daguhh <code.daguhh@zaclys.net>  Fri, 08 Jan 2021 15:58:02 +0100
 
 naivecalendar (0.3) unstable; urgency=medium
 
-  * Initial release 
+  * Create debian package
 
  -- Daguhh <code.daguhh@zaclys.net>  Fri, 08 Jan 2021 10:36:46 +0100
