--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+naivecalendar (0.7.0) UNRELEASED; urgency=medium
+
+  * New upstream release
+  * Add sensible-utils dependency
+
+ -- Daguhh <code.daguhh@zaclys.net>  Sun, 31 Jan 2021 17:46:12 +0100
+
 naivecalendar (0.6.2) UNRELEASED; urgency=medium
 
   * New upstream release
