update copy-to-clipboard option

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+naivecalendar (0.7.1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Daguhh <code.daguhh@zaclys.net>  Mon, 01 Feb 2021 16:24:25 +0100
+
 naivecalendar (0.7.0) UNRELEASED; urgency=medium
 
   * New upstream release
