remove unnecessary printf

--- a/Changelog
+++ b/Changelog
@@ -3,7 +3,10 @@ v0.7.1 :
 	Minor:
 		Capture rofi close error when openning menus
 		Save session cmd parameters after openning menu
-		events now support strftime format in folder name
+		Events now support strftime format in folder name
+
+	Bugs:
+		Only execute -p and -x action once (not in recursions)		
 
 v0.7.0 : Again and again and again
 
