--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,7 @@ v0.7.1 :
 
 	Bugs:
 		Only execute -p and -x action once (not in recursions)		
+		Unwanted blank line in output
 
 v0.7.0 : Again and again and again
 
