--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+naivecalendar (0.7.2) UNRELEASED; urgency=medium
+
+  * New upstream release
+  * Update manpage
+
+ -- Daguhh <code.daguhh@zaclys.net>  Wed, 03 Feb 2021 15:52:52 +0100
+
 naivecalendar (0.7.1) UNRELEASED; urgency=medium
 
   * New upstream release
