--- a/debian/naivecalendar.1
+++ b/debian/naivecalendar.1
@@ -5,7 +5,7 @@ naivecalendar
 - rofi calendar popup
 
 .SH SYNOPSIS
-.B naivecalendar [-h] [-v] [-p] [-x] [-f 
+.B naivecalendar [-h] [-V] [-v] [-p] [-x] [-f 
 .I FORMAT
 .B ] [-e 
 .I EDITOR
@@ -49,8 +49,12 @@ There's somme shortcut too, type it in rofi prompt :
 show this help message and exit
 
 .TP
-.B -v|--version 
+.B -V|--version 
 show program's version number and exit
+
+.TP
+.B -v|--verbose 
+redirect rofi command errors to stdout
 
 .TP
 .B -p|--print
