--- a/Changelog
+++ b/Changelog
@@ -2,7 +2,7 @@ v0.7.3 : Derivation
 
 	Minor:
 		Add "modern" themes
-		Revert log file 
+		Revert log file (correct recursion effect)
 	Bugs:
 		missing return in set_list function
 		typing error when searching for theme existence in user path
