--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+naivecalendar (0.7.3) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Daguhh <code.daguhh@zaclys.net>  Thu, 04 Feb 2021 14:52:58 +0100
+
 naivecalendar (0.7.2) UNRELEASED; urgency=medium
 
   * New upstream release
