--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,13 @@
-v0.7.5 : 
+v0.7.4 : 
 
+	Major:
+		Theme is also applied to popups and menus
 	Minor:
-		Change datetime : today() to now() : permit displaying hour in header
-		or message
+		Change datetime : today() to now() : can display hour in header/message
+		Add Mangolia theme
+		Add shortcut => back to current month
+		Correct code blocks in doc
+		Update completion
 
 v0.7.3 : Quinquennial plan
 
