--- a/Changelog
+++ b/Changelog
@@ -1,10 +1,10 @@
-v0.7.4 : 
+v0.7.4 : Opulence
 
 	Major:
 		Theme is also applied to popups and menus
 	Minor:
 		Change datetime : today() to now() : can display hour in header/message
-		Add Mangolia theme
+		Add Mangolia and Carbon Gold themes from ZB652
 		Add shortcut => back to current month
 		Correct code blocks in doc
 		Update completion
