--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+naivecalendar (0.8.0) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Daguhh <code.daguhh@zaclys.net>  Tue, 02 Mar 2021 17:22:32 +0100
+
 naivecalendar (0.7.4) UNRELEASED; urgency=medium
 
   * New upstream release
