--- a/debian/install
+++ b/debian/install
@@ -4,6 +4,8 @@ tools/naivecalendar-add-event /usr/share/naivecalendar/tools/
 src/naivecalendar.sh /usr/share/naivecalendar/
 src/naivecalendar.py /usr/share/naivecalendar/
 src/themes /usr/share/naivecalendar/
+src/global /usr/share/naivecalendar/
+src/scripts /usr/share/naivecalendar/
 debian/naivecalendar.1 /usr/share/man/man1/
 debian/naivecalendar-update.1 /usr/share/man/man1/
 debian/naivecalendar-add-event.1 /usr/share/man/man1/
