--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+naivecalendar (2.0.1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Daguhh <code.daguhh@zaclys.net>  Fri, 17 Sep 2021 13:00:09 +0200
+
 naivecalendar (2.0.0) UNRELEASED; urgency=medium
 
   * New upstream release
