--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+v2.0.1
+	Major:
+		Update themes file for rofi 1.7 compatibility
+	Minor:
+		Add themes that follow user's ones
+
 v2.0.0
 	Major:
 		/!\ Break conig files compatibility (rename variable,
