--- a/debian/naivecalendar-update.1
+++ b/debian/naivecalendar-update.1
@@ -50,3 +50,6 @@ new value to set (see any config file for type and format)
 .BI -f|--filter " "REGEX
 only edit themes with names that match the extended-regexp (grep -E)
 
+.TP
+.BI -c|--clone " "FILE         
+clone installation configuration file into user folder (scripts, themes or events)
