--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ v2.0.1
 		Update themes file for rofi 1.7 compatibility
 	Minor:
 		Add themes that follow user's ones
+		New update option : clone => populate user config folder
 	Other:
 		Add Makefile 
 
