--- a/debian/naivecalendar-update-themes.1
+++ b/debian/naivecalendar-update-themes.1
@@ -1,12 +1,12 @@
 .TH NAIVECALENDAR 1 "January 6, 2021"
 
 .SH NAME
-naivecalendar-update
+naivecalendar-update-themes
 - script to update all naivecalendar theme at once
 
 
 .SH SYNOPSIS
-.B naivecalendar-update [-h] [-s] [-L] [-a] [-p
+.B naivecalendar-update-themes [-h] [-s] [-L] [-a] [-p
 .I PARAMETER
 .B ] [-v 
 .I NEW_VALUE
@@ -15,7 +15,7 @@ naivecalendar-update
 .B ] 
 
 .SH DESCRIPTION
-.B naivecalendar-update
+.B naivecalendar-update-themes
 is a bash script to update a parameter for all naivecalendar themes in ~/.config/naivecalendar/themes at once
 
 /!\\ Save your themes before use!
