--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+naivecalendar (2.0.2) UNRELEASED; urgency=medium
+
+  * New upstream release
+  * Add theme-generator subcommand
+  * Update completion
+
+ -- Daguhh <code.daguhh@zaclys.net>  Sat, 15 Jan 2022 00:29:22 +0100
+
 naivecalendar (2.0.1) UNRELEASED; urgency=medium
 
   * New upstream release
